# FEFU-aggregator

./: .env  .gitignore  Cargo.toml  README.md  targets.json
migrations/2022-06-17-174312_cached_posts/: up.sql
migrations/2022-06-18-210858_groups/: down.sql  up.sql
migrations/2022-06-18-224832_public_tag/: down.sql  up.sql
migrations/2022-06-19-203944_users/: up.sql
migrations/2022-06-25-192729_threads/: down.sql  up.sql
migrations/2022-06-30-034135_likes/: down.sql  up.sql
src/: init.rs  keys.rs  lib.rs  main.rs  routes.rs  schema.rs  vk_api.rs
src/db/: connection.rs  mod.rs  models.rs
src/db/models/: db_models.rs  ff_models.rs  mod.rs
static/css/: 1.css  st_body.css  st_header.css  styles.css
static/scripts/: create_thread.js  likes.js  main.js  scr_main.js  scr_popup.js  scr_switch.js
templates/: __page_category.html.tera  __page_feed.html.tera  __page_login.html.tera  base.html.tera  category.html.tera  feed.html.tera  index.html.tera  login.html.tera  new_thread.html.tera  temp_header.html.tera  thread.html.tera  threads.html.tera
